# kagari

./: AGENTS.md  README.md  pyproject.toml  uds.toml
.github/: copilot-instructions.md
.github/prompts/: plan-udsMcp.prompt.md
.kiro/specs/flow-subflow-repeat-logging/: .config.kiro  design.md  requirements.md  tasks.md
docs/: step_hook_review.md
examples/: .gitignore  demo_virtual_can_e2e.py
examples/extensions/: dynamic_payload.py
examples/flows/: demo_virtual_can_flow.yaml
src/uds_mcp/: __init__.py  config.py  main.py  server.py
src/uds_mcp/can/: __init__.py  config.py  interface.py
src/uds_mcp/extensions/: runtime.py
src/uds_mcp/flow/: engine.py  schema.py  templates.py
src/uds_mcp/logging/: store.py
src/uds_mcp/models/: events.py
src/uds_mcp/uds/: __init__.py  client.py
tests/: test_blf_streaming.py  test_can_interface.py  test_config.py  test_crypto.py  test_event_store.py  test_extensions_runtime.py  test_flow_engine.py  test_flow_schema.py  test_flow_status.py  test_flow_suite.py  test_flow_suite_report.py  test_flow_templates.py  test_flow_trace_search.py  test_init.py  test_properties.py  test_uds_client.py
uds_mcp/: cli.py  config.py  crypto.py  init.py  main.py  server.py
uds_mcp/can/: config.py  interface.py
uds_mcp/extensions/: __init__.py  runtime.py
uds_mcp/flow/: __init__.py  engine.py  report.py  schema.py  suite.py  templates.py
uds_mcp/flow/templates/: report.html
uds_mcp/logging/: __init__.py  store.py
uds_mcp/logging/exporters/: __init__.py  blf.py
uds_mcp/uds/: client.py
