[project]
name = "uds-mcp"
version = "0.1.0"
description = "UDS MCP server based on py-uds and python-can"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "python-can>=4.6.1",
    "pydantic>=2.11.0",
    "pyyaml>=6.0.2",
    "py-uds>=4.0.0",
    "pycryptodome>=3.21.0",
    "bincopy>=20.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[project.scripts]
uds-mcp = "uds_mcp.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uds_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
